# PSU_CAPSTONE_F2023

./: .gitmodules  README.md  README.rst
.obsidian/: workspace.json
9160dk/: readme.md  readme.rst
9160dk/IPE_OTA/: Kconfig  README.rst  prj.conf  readme.md  received_file
9160dk/IPE_OTA-UNSTABLE/: prj.conf
9160dk/IPE_OTA_BLE/: CMakeLists.txt  readme.md
9160dk/IPE_OTA_BLE/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
9160dk/IPE_OTA_BLE/src/: aggregator.c  aggregator.h  ble.c  main.c  main.h  mqtt_ble_pipe.c  mqtt_connection.c  oneM2Mmessages.c  oneM2Mmessages.h  update.c
9160dk/LTE_BLE/: Kconfig
9160dk/hci_lpuart/: README.rst  lte_ble_gateway.code-workspace  prj.conf
ESP32/: CameraBLEFirmware.ino  DemoBLEFirmware.ino  ESP32BLETest.ino  ESP32Test.ino  readme.md
ESPFlashTest/ESPFlashTest/: platformio.ini
RPi/: ble.py  readme.md
RPi/Fundamentals/: BlinkingLED.cpp  bluetoothctl cmd.txt
RaspberryPi/: A.py  A_backup.py  Demo_v1_dumb.py  Demo_v2_smart.py  ble.py  control.py  datafile.txt  readme.md  uart_peripheral.py
Thingy91/: readme.md
Thingy91/LTE_BLE/: README.rst  prj.conf
Thingy91/hci_lpuart/: prj.conf
Thingy91/lte_ble_gateway/: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf
docs/: 9160Update.md  Bluetooth.md  ESP32Update.md  RpiUpdate.md  demo.md  firmwareUpdate.md  oneM2M.md
images/draw.io Source Files/: 9160CodeBreakdown.drawio  BLEConn.drawio  ESP32Update.drawio  Flow Diagram Demo2.drawio  MQTT.drawio  MessageBreakdown.drawio  README.md  (+6 more)
nrF9160dk/: readme.md
onem2msmartled/: platformio.ini
(+45 files in other folders)
